# paparazzit

./: .gitignore  .pre-commit-config.yaml  HANDOVER.md  README.md  main.py  pyproject.toml
.specify/memory/: constitution.md
samples/: sitemap.xml  sitemap.xml:Zone.Identifier
specs/001-core-snap/: plan.md  spec.md  tasks.md
specs/002-batch-snap/: plan.md  spec.md
specs/003-sitemap-scout/: plan.md  spec.md
specs/004-dynamic-output-paths/: plan.md  spec.md
specs/005-strict-sitemap-parsing/: plan.md  spec.md
specs/006-full-page-default/: plan.md  spec.md
specs/007-unified-manifest-metadata/: plan.md  spec.md
specs/008-test-suite/: spec.md
specs/009-quality-assurance-foundation/: spec.md
specs/010-manifest-storage-convention/: plan.md  spec.md
specs/011-smart-loading/: plan.md  spec.md
specs/012-strict-directory-structure/: plan.md  spec.md
specs/013-smart-sitemap-detection/: plan.md  spec.md
specs/014-security-hardening/: plan.md  spec.md
specs/015-smart-scout-filenames/: plan.md  spec.md
specs/016-auto-scroll-lazy-loading/: plan.md  spec.md
specs/017-portable-project-root/: plan.md  spec.md
specs/018-concurrent-captures/: plan.md  spec.md
src/paparazzit/: cli.py
src/paparazzit/capture/: engine.py  mss_engine.py  playwright_engine.py
src/paparazzit/utils/: manifest.py  sitemap.py  storage.py
tests/: test_cli.py  test_concurrency.py  test_manifest.py  test_portable_root.py  test_sitemap.py  test_sitemap_detection.py  test_storage.py
